--- a/.gitattributes
+++ b/.gitattributes
@@ -485,6 +485,7 @@ subethaedit/Modes/Objective-C.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Compile.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Lookup[!!-~]in[!!-~]AppKiDo.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Counterpart.scpt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Project[!!-~]File.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/ToolbarAppKiDo.png -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/ToolbarCounterpart.tif -text
