Added SystemVersionCheck-1.1 (http://weblog.bignerdranch.com/?p=13). Still needs localization.
* SystemVersionCheck.m
  Added SystemVersionCheck from Chris Campbell (Big Nerd Ranch). It's a boot-
  strap tool which checks for the required system version.

* Info.plist
  Set LSMinimumSystemVersion to 10.3.9 and added necessary keys for System-
  VersionCheck. Also adjusted the CFBundleExecutable element for the tool.

* SubEthaEdit.xcodeproj
  Added a target for the SystemVersionCheck and adjusted the SubEthaEdit
  target to build the tool and copy it to the bundle.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1096,6 +1096,7 @@ subethaedit/SyntaxHighlighter.h -text
 subethaedit/SyntaxHighlighter.m -text
 subethaedit/SyntaxStyle.h -text
 subethaedit/SyntaxStyle.m -text
+subethaedit/SystemVersionCheck.m -text
 subethaedit/TCMApplication.h -text
 subethaedit/TCMApplication.m -text
 subethaedit/TCMBEEP/Info.plist -text
