--- a/.gitattributes
+++ b/.gitattributes
@@ -228,6 +228,7 @@ subethaedit/English.lproj/SubEthaEditHelp/img/favicon.png -text
 subethaedit/English.lproj/SubEthaEditHelp/img/see-small.png -text
 subethaedit/English.lproj/SubEthaEditHelp/img/see.png -text
 subethaedit/English.lproj/SubEthaEditHelp/img/vertline2.gif -text
+subethaedit/English.lproj/SystemVersionCheck.strings -text
 subethaedit/English.lproj/WebPreview.nib/classes.nib -text
 subethaedit/English.lproj/WebPreview.nib/info.nib -text
 subethaedit/English.lproj/WebPreview.nib/keyedobjects.nib -text
