--- a/.gitattributes
+++ b/.gitattributes
@@ -487,9 +487,11 @@ subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Compile.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Lookup[!!-~]in[!!-~]AppKiDo.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Counterpart.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Project[!!-~]File.scpt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Project.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/ToolbarAppKiDo.png -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/ToolbarCounterpart.tif -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/ToolbarXcodeProject.png -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Info.plist -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/AutocompleteAdditions.txt -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/ChangeLog.txt -text
