- added show invisible characters as toolbar button (part of SEE-372) - fixed windowForSheet (the super implementation wasn't handling the case with multiple window controllers correctly - you can test by new file, new view, then press save - boom sheet went directly to the window 1 not to the front window)

--- a/.gitattributes
+++ b/.gitattributes
@@ -1230,6 +1230,9 @@ subethaedit/artwork/Internet.tiff -text
 subethaedit/artwork/InternetResume.tiff -text
 subethaedit/artwork/InternetStop.tiff -text
 subethaedit/artwork/InvertedIBeam.tiff -text
+subethaedit/artwork/InvisibleCharacterSwitch.psd -text
+subethaedit/artwork/InvisibleCharactersHide.png -text
+subethaedit/artwork/InvisibleCharactersShow.png -text
 subethaedit/artwork/InvitationBadge1-2.tiff -text
 subethaedit/artwork/InvitationBadge3.tiff -text
 subethaedit/artwork/LibraryFolderIcon.tiff -text
