--- a/.gitattributes
+++ b/.gitattributes
@@ -487,10 +487,12 @@ subethaedit/Modes/Objective-C.mode/Contents/Resources/German.lproj/Localizable.s
 subethaedit/Modes/Objective-C.mode/Contents/Resources/ModeSettings.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Compile.scpt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Insert[!!-~]Call[!!-~]To[!!-~]Super.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Lookup[!!-~]in[!!-~]AppKiDo.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Counterpart.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Project[!!-~]File.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Project.scpt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/shell/insert_super.py -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/ToolbarAppKiDo.png -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/ToolbarCounterpart.tif -text
