--- a/.gitattributes
+++ b/.gitattributes
@@ -488,6 +488,7 @@ subethaedit/Modes/Objective-C.mode/Contents/Resources/ModeSettings.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Compile.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Insert[!!-~]Call[!!-~]To[!!-~]Super.scpt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Insert[!!-~]NSLog[!!-~]with[!!-~]Function[!!-~]Call.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Lookup[!!-~]in[!!-~]AppKiDo.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Counterpart.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Project[!!-~]File.scpt -text
