--- a/.gitattributes
+++ b/.gitattributes
@@ -510,6 +510,8 @@ subethaedit/Modes/PHP-HTML.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/Check[!!-~]Syntax.scpt -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/Insert[!!-~]HTML[!!-~]Color.scpt -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/Lookup[!!-~]in[!!-~]PHP[!!-~]Documentation.scpt -text
+subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/Run[!!-~]Using[!!-~]PHP.scpt -text
+subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/Syntax[!!-~]Check.scpt -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/ToolbarIconPHPLookup.png -text
 subethaedit/Modes/Pascal.mode/Contents/Info.plist -text
@@ -1298,6 +1300,7 @@ subethaedit/artwork/SymbolV.tiff -text
 subethaedit/artwork/SymbolWarn.tiff -text
 subethaedit/artwork/ToolbarIconBuild.tiff -text
 subethaedit/artwork/ToolbarIconColorChooser.tiff -text
+subethaedit/artwork/ToolbarIconRun.tiff -text
 subethaedit/artwork/ToolbarIconTerminal.png -text
 subethaedit/artwork/URLIcon.tiff -text
 subethaedit/artwork/WaitPipe.png -text
