--- a/.gitattributes
+++ b/.gitattributes
@@ -559,10 +559,11 @@ subethaedit/Modes/Ruby.mode/Contents/Resources/German.lproj/Localizable.strings 
 subethaedit/Modes/Ruby.mode/Contents/Resources/ModeSettings.xml -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/README.txt -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/RegexSymbols.xml -text
+subethaedit/Modes/Ruby.mode/Contents/Resources/Scripts/10-Insert[!!-~]Shebang.scpt -text
+subethaedit/Modes/Ruby.mode/Contents/Resources/Scripts/20-chmod[!!-~]ug+x.scpt -text
+subethaedit/Modes/Ruby.mode/Contents/Resources/Scripts/Check[!!-~]Syntax.scpt -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/Scripts/Insert[!!-~]HTML[!!-~]Color.scpt -text
-subethaedit/Modes/Ruby.mode/Contents/Resources/Scripts/Insert[!!-~]Shebang.scpt -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/Scripts/Run[!!-~]in[!!-~]Terminal.scpt -text
-subethaedit/Modes/Ruby.mode/Contents/Resources/Scripts/chmod[!!-~]ug+x.scpt -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/Symbol!.png -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/SymbolD.png -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/SyntaxDefinition.xml -text
@@ -1094,12 +1095,10 @@ subethaedit/ScriptTextSelection.h -text
 subethaedit/ScriptTextSelection.m -text
 subethaedit/ScriptWrapper.h -text
 subethaedit/ScriptWrapper.m -text
-subethaedit/Scripts/Check[!!-~]Syntax.scpt -text
-subethaedit/Scripts/Lowercase.scpt -text
-subethaedit/Scripts/Open[!!-~]Terminal[!!-~]Here.scpt -text
-subethaedit/Scripts/Rot13.scpt -text
-subethaedit/Scripts/Save[!!-~]front[!!-~]document.scpt -text
-subethaedit/Scripts/Uppercase.scpt -text
+subethaedit/Scripts/10-Uppercase.scpt -text
+subethaedit/Scripts/15-Lowercase.scpt -text
+subethaedit/Scripts/30-Rot13.scpt -text
+subethaedit/Scripts/40-Open[!!-~]Terminal[!!-~]Here.scpt -text
 subethaedit/SelectCommand.h -text
 subethaedit/SelectCommand.m -text
 subethaedit/SelectionOperation.h -text
