- added basic scripts to perl

--- a/.gitattributes
+++ b/.gitattributes
@@ -539,6 +539,10 @@ subethaedit/Modes/Perl.mode/Contents/Resources/German.lproj/InfoPlist.strings -t
 subethaedit/Modes/Perl.mode/Contents/Resources/German.lproj/Localizable.strings -text
 subethaedit/Modes/Perl.mode/Contents/Resources/ModeSettings.xml -text
 subethaedit/Modes/Perl.mode/Contents/Resources/RegexSymbols.xml -text
+subethaedit/Modes/Perl.mode/Contents/Resources/Scripts/10-Insert[!!-~]Shebang.scpt -text
+subethaedit/Modes/Perl.mode/Contents/Resources/Scripts/15-chmod[!!-~]ug+x.scpt -text
+subethaedit/Modes/Perl.mode/Contents/Resources/Scripts/30-Check[!!-~]Syntax.scpt -text
+subethaedit/Modes/Perl.mode/Contents/Resources/Scripts/40-Run[!!-~]in[!!-~]Terminal.scpt -text
 subethaedit/Modes/Perl.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Python.mode/Contents/Info.plist -text
 subethaedit/Modes/Python.mode/Contents/Resources/ChangeLog.txt -text
