--- a/.gitattributes
+++ b/.gitattributes
@@ -588,9 +588,11 @@ subethaedit/Modes/XML.mode/Contents/Resources/German.lproj/InfoPlist.strings -te
 subethaedit/Modes/XML.mode/Contents/Resources/German.lproj/Localizable.strings -text
 subethaedit/Modes/XML.mode/Contents/Resources/ModeSettings.xml -text
 subethaedit/Modes/XML.mode/Contents/Resources/RegexSymbols.xml -text
+subethaedit/Modes/XML.mode/Contents/Resources/Scripts/Check[!!-~]Well[!!-~]Formedness.scpt -text
 subethaedit/Modes/XML.mode/Contents/Resources/Scripts/CloseLastTag.scpt -text
 subethaedit/Modes/XML.mode/Contents/Resources/Scripts/Insert[!!-~]HTML[!!-~]Color.scpt -text
 subethaedit/Modes/XML.mode/Contents/Resources/Scripts/TransformWithXSLT.scpt -text
+subethaedit/Modes/XML.mode/Contents/Resources/Scripts/Validate.scpt -text
 subethaedit/Modes/XML.mode/Contents/Resources/Scripts/shell/closetag.pl -text
 subethaedit/Modes/XML.mode/Contents/Resources/Symbol!.png -text
 subethaedit/Modes/XML.mode/Contents/Resources/SymbolID.png -text
