--- a/.gitattributes
+++ b/.gitattributes
@@ -494,13 +494,13 @@ subethaedit/Modes/Objective-C.mode/Contents/Resources/German.lproj/InfoPlist.str
 subethaedit/Modes/Objective-C.mode/Contents/Resources/German.lproj/Localizable.strings -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/ModeSettings.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/RegexSymbols.xml -text
-subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Compile.scpt -text
-subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Insert[!!-~]Call[!!-~]To[!!-~]Super.scpt -text
-subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Insert[!!-~]NSLog[!!-~]with[!!-~]Function[!!-~]Call.scpt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/10-InsertNSLogWithFunctionCall.scpt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/20-InsertCallToSuper.scpt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/30-OpenCounterpart.scpt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/40-OpenFileInProject.scpt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/45-OpenXcodeProject.scpt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/50-CompileUsingXcode.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Lookup[!!-~]in[!!-~]AppKiDo.scpt -text
-subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Counterpart.scpt -text
-subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Project[!!-~]File.scpt -text
-subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Project.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/shell/insert_super.py -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/ToolbarAppKiDo.png -text
@@ -515,15 +515,15 @@ subethaedit/Modes/PHP-HTML.mode/Contents/Resources/German.lproj/InfoPlist.string
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/German.lproj/Localizable.strings -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/ModeSettings.xml -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/RegexSymbols.xml -text
-subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/Check[!!-~]Syntax.scpt -text
-subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/CloseLastTag.scpt -text
-subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/Insert[!!-~]HTML[!!-~]Color.scpt -text
+subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/10-Close[!!-~]Last[!!-~]Tag.scpt -text
+subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/20-InsertHTMLColor.scpt -text
+subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/30-CheckSyntax.scpt -text
+subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/40-RunUsingPHP.scpt -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/Lookup[!!-~]in[!!-~]PHP[!!-~]Documentation.scpt -text
-subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/Run[!!-~]Using[!!-~]PHP.scpt -text
-subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/Syntax[!!-~]Check.scpt -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/Scripts/shell/closetag.pl -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/ToolbarIconPHPLookup.png -text
+subethaedit/Modes/PHP-HTML.mode/Contents/Resources/ToolbarIconRunUsingPHP.png -text
 subethaedit/Modes/Pascal.mode/Contents/Info.plist -text
 subethaedit/Modes/Pascal.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/Pascal.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
@@ -569,9 +569,9 @@ subethaedit/Modes/Ruby.mode/Contents/Resources/README.txt -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/Scripts/10-Insert[!!-~]Shebang.scpt -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/Scripts/20-chmod[!!-~]ug+x.scpt -text
-subethaedit/Modes/Ruby.mode/Contents/Resources/Scripts/Check[!!-~]Syntax.scpt -text
+subethaedit/Modes/Ruby.mode/Contents/Resources/Scripts/30-Check[!!-~]Syntax.scpt -text
+subethaedit/Modes/Ruby.mode/Contents/Resources/Scripts/40-Run[!!-~]in[!!-~]Terminal.scpt -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/Scripts/Insert[!!-~]HTML[!!-~]Color.scpt -text
-subethaedit/Modes/Ruby.mode/Contents/Resources/Scripts/Run[!!-~]in[!!-~]Terminal.scpt -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/Symbol!.png -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/SymbolD.png -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/SyntaxDefinition.xml -text
@@ -592,11 +592,11 @@ subethaedit/Modes/XML.mode/Contents/Resources/German.lproj/InfoPlist.strings -te
 subethaedit/Modes/XML.mode/Contents/Resources/German.lproj/Localizable.strings -text
 subethaedit/Modes/XML.mode/Contents/Resources/ModeSettings.xml -text
 subethaedit/Modes/XML.mode/Contents/Resources/RegexSymbols.xml -text
-subethaedit/Modes/XML.mode/Contents/Resources/Scripts/Check[!!-~]Well[!!-~]Formedness.scpt -text
-subethaedit/Modes/XML.mode/Contents/Resources/Scripts/CloseLastTag.scpt -text
+subethaedit/Modes/XML.mode/Contents/Resources/Scripts/10-CloseLastTag.scpt -text
+subethaedit/Modes/XML.mode/Contents/Resources/Scripts/20-CheckWellFormedness.scpt -text
+subethaedit/Modes/XML.mode/Contents/Resources/Scripts/30-Validate.scpt -text
+subethaedit/Modes/XML.mode/Contents/Resources/Scripts/50-TransformWithXSLT.scpt -text
 subethaedit/Modes/XML.mode/Contents/Resources/Scripts/Insert[!!-~]HTML[!!-~]Color.scpt -text
-subethaedit/Modes/XML.mode/Contents/Resources/Scripts/TransformWithXSLT.scpt -text
-subethaedit/Modes/XML.mode/Contents/Resources/Scripts/Validate.scpt -text
 subethaedit/Modes/XML.mode/Contents/Resources/Scripts/shell/closetag.pl -text
 subethaedit/Modes/XML.mode/Contents/Resources/Symbol!.png -text
 subethaedit/Modes/XML.mode/Contents/Resources/SymbolID.png -text
@@ -608,6 +608,9 @@ subethaedit/Modes/bash.mode/Contents/Resources/German.lproj/InfoPlist.strings -t
 subethaedit/Modes/bash.mode/Contents/Resources/German.lproj/Localizable.strings -text
 subethaedit/Modes/bash.mode/Contents/Resources/ModeSettings.xml -text
 subethaedit/Modes/bash.mode/Contents/Resources/RegexSymbols.xml -text
+subethaedit/Modes/bash.mode/Contents/Resources/Scripts/10-Insert[!!-~]Shebang.scpt -text
+subethaedit/Modes/bash.mode/Contents/Resources/Scripts/20-chmod[!!-~]ug+x.scpt -text
+subethaedit/Modes/bash.mode/Contents/Resources/Scripts/30-Run[!!-~]in[!!-~]Terminal.scpt -text
 subethaedit/Modes/bash.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/MoreIsBetter/MoreCFQ.c -text
 subethaedit/MoreIsBetter/MoreCFQ.h -text
@@ -1331,6 +1334,7 @@ subethaedit/artwork/ToolbarIconColorChooser.tiff -text
 subethaedit/artwork/ToolbarIconOpenURL.png -text
 subethaedit/artwork/ToolbarIconOpenURL.psd -text
 subethaedit/artwork/ToolbarIconRun.tiff -text
+subethaedit/artwork/ToolbarIconRunInTerminal.png -text
 subethaedit/artwork/ToolbarIconTerminal.png -text
 subethaedit/artwork/URLIcon.tiff -text
 subethaedit/artwork/WaitPipe.png -text
