Added update to German localization for all nib and strings files.

--- a/.gitattributes
+++ b/.gitattributes
@@ -322,6 +322,7 @@ subethaedit/German.lproj/SubEthaEditHelp/img/favicon.png -text
 subethaedit/German.lproj/SubEthaEditHelp/img/see-small.png -text
 subethaedit/German.lproj/SubEthaEditHelp/img/see.png -text
 subethaedit/German.lproj/SubEthaEditHelp/img/vertline2.gif -text
+subethaedit/German.lproj/SystemVersionCheck.strings -text
 subethaedit/German.lproj/WebPreview.nib/classes.nib -text
 subethaedit/German.lproj/WebPreview.nib/info.nib -text
 subethaedit/German.lproj/WebPreview.nib/keyedobjects.nib -text
