--- a/.gitattributes
+++ b/.gitattributes
@@ -1130,6 +1130,7 @@ subethaedit/Scripts/50-Open[!!-~]URL.scpt -text
 subethaedit/Scripts/60-Hardwrap.scpt -text
 subethaedit/Scripts/61-DeHardwarp.scpt -text
 subethaedit/Scripts/90-Diff[!!-~]Unsaved[!!-~]Changes.scpt -text
+subethaedit/Scripts/99-PipeThrough.scpt -text
 subethaedit/Scripts/shell/dehardwrap.pl -text
 subethaedit/Scripts/shell/open_url.rb -text
 subethaedit/SelectCommand.h -text
