--- a/.gitattributes
+++ b/.gitattributes
@@ -504,6 +504,7 @@ subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/30-OpenCounterpart
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/40-OpenFileInProject.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/45-OpenXcodeProject.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/50-CompileUsingXcode.scpt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/60-un_comment_lines.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Lookup[!!-~]in[!!-~]AppKiDo.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/shell/insert_super.py -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/SyntaxDefinition.xml -text
